adjust front end layout

--- a/web_dashboard/static/css/test.css
+++ b/web_dashboard/static/css/test.css
@@ -6,3 +6,7 @@ body {
     display: block;
     margin: 5px 0; /* Add some margin for better spacing */
 }
+.manual{
+    width: 100px;
+    height: auto;
+}
