--- a/web_dashboard/templates/test_template.html
+++ b/web_dashboard/templates/test_template.html
@@ -15,7 +15,30 @@
     <div class="container">
         <h1 class="text-center my-4">Robot Dashboard</h1>
         <div class="row">
-            <div class="col-md-4 col-sm-6 text-center">
+            <div class="col-sm-3">
+                <h2> M1</h2>
+                <button class="btn btn-success control-buttons" onclick="controlDevice('motor1', 'on')">
+                    <i class="fas fa-lightbulb"></i> ON
+                </button>
+                <button class="btn btn-danger control-buttons" onclick="controlDevice('motor1', 'off')">
+                    <i class="fas fa-power-off"></i> OFF
+                </button>
+                <h2>M2</h2>
+                <button class="btn btn-success control-buttons" onclick="controlDevice('motor2', 'on')">
+                    <i class="fas fa-lightbulb"></i> ON
+                </button>
+                <button class="btn btn-danger control-buttons" onclick="controlDevice('motor2', 'off')">
+                    <i class="fas fa-power-off"></i> OFF
+                </button>
+                <h2>M3</h2>
+                <button class="btn btn-success control-buttons" onclick="controlDevice('motor3', 'on')">
+                    <i class="fas fa-lightbulb"></i> ON
+                </button>
+                <button class="btn btn-danger control-buttons" onclick="controlDevice('motor3', 'off')">
+                    <i class="fas fa-power-off"></i> OFF
+                </button>
+            </div>
+            <div class="col-sm-6">
                 <h2>Moteur M1</h2>
                 <button class="btn btn-success control-buttons" onclick="controlDevice('motor1', 'on')">
                     <i class="fas fa-lightbulb"></i> ON
@@ -23,8 +46,6 @@
                 <button class="btn btn-danger control-buttons" onclick="controlDevice('motor1', 'off')">
                     <i class="fas fa-power-off"></i> OFF
                 </button>
-            </div>
-            <div class="col-md-4 col-sm-6 text-center">
                 <h2>Moteur M2</h2>
                 <button class="btn btn-success control-buttons" onclick="controlDevice('motor2', 'on')">
                     <i class="fas fa-lightbulb"></i> ON
@@ -32,8 +53,29 @@
                 <button class="btn btn-danger control-buttons" onclick="controlDevice('motor2', 'off')">
                     <i class="fas fa-power-off"></i> OFF
                 </button>
+                <h2>Moteur M3</h2>
+                <button class="btn btn-success control-buttons" onclick="controlDevice('motor3', 'on')">
+                    <i class="fas fa-lightbulb"></i> ON
+                </button>
+                <button class="btn btn-danger control-buttons" onclick="controlDevice('motor3', 'off')">
+                    <i class="fas fa-power-off"></i> OFF
+                </button>
             </div>
-            <div class="col-md-4 col-sm-6 text-center">
+            <div class="col-sm-3">
+                <h2>Moteur M1</h2>
+                <button class="btn btn-success control-buttons" onclick="controlDevice('motor1', 'on')">
+                    <i class="fas fa-lightbulb"></i> ON
+                </button>
+                <button class="btn btn-danger control-buttons" onclick="controlDevice('motor1', 'off')">
+                    <i class="fas fa-power-off"></i> OFF
+                </button>
+                <h2>Moteur M2</h2>
+                <button class="btn btn-success control-buttons" onclick="controlDevice('motor2', 'on')">
+                    <i class="fas fa-lightbulb"></i> ON
+                </button>
+                <button class="btn btn-danger control-buttons" onclick="controlDevice('motor2', 'off')">
+                    <i class="fas fa-power-off"></i> OFF
+                </button>
                 <h2>Moteur M3</h2>
                 <button class="btn btn-success control-buttons" onclick="controlDevice('motor3', 'on')">
                     <i class="fas fa-lightbulb"></i> ON
