--- a/web_dashboard/templates/index.html
+++ b/web_dashboard/templates/index.html
@@ -15,6 +15,30 @@
     <div class="container">
         <h1 class="text-center my-4">Robot Dashboard</h1>
         <div class="row">
+            <div class="col-sm">
+                <div>
+                    <h2>Robot Information</h2>
+                    <p>Battery Level (%)</p>
+                    <p>CPU Temperature (°C)</p>
+                    <p>CPU Usage (%)</p>
+                    <p>RAM Usage (%)</p>
+                    <p>Remote Connexion</p>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div>
+                    <h2>Robot Control</h2>
+                    <button class="btn btn-danger control-buttons" onclick="controlDevice('motor2', 'off')">
+                        <i class="fas fa-power-off"></i> OFF
+                    <button class="btn btn-success control-buttons" onclick="controlDevice('motor1', 'on')">
+                        <i class="fas fa-lightbulb"></i> ON
+                    </button>
+                </div>
+                
+                </button>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-4 col-sm-6 text-center">
                 <h2>Moteur M1</h2>
                 <button class="btn btn-success control-buttons" onclick="controlDevice('motor1', 'on')">
