--- a/web_dashboard/templates/index.html
+++ b/web_dashboard/templates/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
     <div class="container">
+
         <h1 class="text-center my-4">Robot Dashboard</h1>
+
         <div class="row">
             <div class="col-sm">
                 <div>
@@ -24,6 +26,9 @@
                     <p>RAM Usage (%)</p>
                     <p>Remote Connexion</p>
                 </div>
+                <div id="joystick-container" style="position:relative; width:200px; height:200px; background:#eee; border-radius:50%;">
+                    <div id="joystick" style="width:40px; height:40px; background:#333; border-radius:50%; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);"></div>
+                  </div>
             </div>
             <div class="col-sm">
                 <div>
@@ -81,5 +86,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/joystick.js') }}"></script>
 </body>
 </html>
