[debug] add joystick control

--- a/web_dashboard/templates/index.html
+++ b/web_dashboard/templates/index.html
@@ -26,9 +26,9 @@
                     <p>RAM Usage (%)</p>
                     <p>Remote Connexion</p>
                 </div>
-                <div id="joystick-container" style="position:relative; width:200px; height:200px; background:#eee; border-radius:50%;">
-                    <div id="joystick" style="width:40px; height:40px; background:#333; border-radius:50%; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);"></div>
-                  </div>
+                <div id="joystick-zone" style="position: relative; width: 200px; height: 200px; background: #eee; border-radius: 50%;">
+                    <div id="joystick" style="position: absolute; width: 40px; height: 40px; background: #333; border-radius: 50%; top: 80px; left: 80px;"></div>
+                </div>
             </div>
             <div class="col-sm">
                 <div>
